tests/fixtures/valid/bytes/bytes_operations.py
# Bytes operations
a: bytes = b"ab"
b: bytes = b"cd"

# Concatenation
print(a + b)

# Repetition
print(a * 3)
print(b * 2)
