tests/fixtures/invalid/bytes_pow_str.py
# Cannot power Bytes and Str
x: bytes = b"hello" ** "hello"
